// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Button Default 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#00B0FF",
        "borderRadius": 32,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
            "fontSize": 18,
            "textAlign": "center",
          },
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 17,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
            undefined,
            undefined,
          ],
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Disabled 1`] = `
<View
  testID="fake-button-disabled"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "marginBottom": 10,
        },
        Array [
          Object {
            "borderRadius": 32,
            "borderWidth": 0,
            "height": 54,
            "marginBottom": 0,
          },
          Object {
            "backgroundColor": "#00B0FF",
          },
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
  >
    <Text
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
            "fontSize": 18,
            "textAlign": "center",
          },
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 17,
              "fontWeight": "700",
              "textAlign": "center",
            },
            undefined,
            Object {
              "color": "#90A4AE",
            },
            undefined,
          ],
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Inverted 1`] = `
<View
  testID="fake-button"
>
  <View
    accessible={true}
    isTVSelectable={true}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "alignItems": "center",
        "alignSelf": "stretch",
        "backgroundColor": "#FFFFFF",
        "borderRadius": 32,
        "borderWidth": 0,
        "flexDirection": "row",
        "height": 54,
        "justifyContent": "center",
        "marginBottom": 0,
        "opacity": 1,
      }
    }
  >
    <Text
      style={
        Array [
          Object {
            "backgroundColor": "transparent",
            "flex": 1,
            "fontSize": 18,
            "textAlign": "center",
          },
          Array [
            Object {
              "color": "#FFFFFF",
              "fontSize": 17,
              "fontWeight": "700",
              "textAlign": "center",
            },
            Object {
              "color": "#546E7A",
            },
            undefined,
            undefined,
          ],
        ]
      }
    >
      Here we go!
    </Text>
  </View>
</View>
`;

exports[`Storyshots Button Loading 1`] = `
<View
  testID="fake-button-loading"
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "alignSelf": "stretch",
          "borderRadius": 8,
          "borderWidth": 1,
          "flexDirection": "row",
          "height": 44,
          "justifyContent": "center",
          "marginBottom": 10,
        },
        Array [
          Object {
            "borderRadius": 32,
            "borderWidth": 0,
            "height": 54,
            "marginBottom": 0,
          },
          Object {
            "backgroundColor": "#00B0FF",
          },
          undefined,
          undefined,
        ],
        Object {
          "backgroundColor": "#ECEFF1",
        },
      ]
    }
  >
    <ActivityIndicator
      animating={true}
      color="#90A4AE"
      hidesWhenStopped={true}
      size="small"
      style={
        Object {
          "alignSelf": "center",
        }
      }
    />
  </View>
</View>
`;
